--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
-</html>
+<div class="pcast-player">
+  <div class="pcast-player-controls">
+    <button class="pcast-play"><i class="fa fa-play"></i><span>Play</span></button>
+    <button class="pcast-pause"><i class="fa fa-pause"></i><span>Pause</span></button>
+    <button class="pcast-rewind"><i class="fa fa-fast-backward"></i><span>Rewind</span></button>
+    <span class="pcast-currenttime pcast-time">00:00</span>
+    <progress class="pcast-progress" value="0"></progress>
+    <span class="pcast-duration pcast-time">00:00</span>
+    <button class="pcast-speed">1x</button>
+    <button class="pcast-mute"><i class="fa fa-volume-up"></i><span>Mute/Unmute</span></button>
+  </div>
+  <audio src="https://s3.us-east-2.amazonaws.com/lgpodcast/SampleAudio_0.4mb.mp3"></audio><a class="pcast-download" href="https://s3.us-east-2.amazonaws.com/lgpodcast/SampleAudio_0.4mb.mp3" download>Download MP3</a>
+</div>
