--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Have Butter, Will Bake</title>
 </head>
   
+<body>
 <div class="pcast-player">
   <div class="pcast-player-controls">
     <button class="pcast-play"><i class="fa fa-play"></i><span>Play</span></button>
@@ -17,6 +18,8 @@
   </div>
   <audio src="https://s3.us-east-2.amazonaws.com/lgpodcast/SampleAudio_0.4mb.mp3"></audio><a class="pcast-download" href="https://s3.us-east-2.amazonaws.com/lgpodcast/SampleAudio_0.4mb.mp3" download>Download MP3</a>
 </div>
+</body>
+  
 <style>
   body {
   font-size: 0.925em;
@@ -203,4 +206,5 @@
   }
 })(this);
 </script>
+  
 </html>
