--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
 <title>Have Butter, Will Bake</title>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/core.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script> 
 </head>
   
 <body>
@@ -24,7 +25,7 @@
 </body>
   
 <style>
-  body {
+body {
   font-size: 0.925em;
   padding: 3%;
   
