--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
 <title>Have Butter, Will Bake</title>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.9/mediaelementplayer.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/core.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.9/mediaelement-and-player.min.js"></script> 
 </head>
   
 <body>
@@ -22,6 +24,7 @@
   </div>
   <audio src="https://s3.us-east-2.amazonaws.com/lgpodcast/SampleAudio_0.4mb.mp3"></audio><a class="pcast-download" href="https://s3.us-east-2.amazonaws.com/lgpodcast/SampleAudio_0.4mb.mp3" download>Download MP3</a>
 </div>
+  <audio class="mejs__player" src="https://s3.us-east-2.amazonaws.com/lgpodcast/SampleAudio_0.4mb.mp3" width="320" height="240" type="audio/mp3"></audio>
 </body>
   
 <style>
