--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
   
 <body>
+  <h2> Option 1</h2>
 <div class="pcast-player">
   <div class="pcast-player-controls">
     <button class="pcast-play"><i class="fa fa-play"></i><span></span></button>
@@ -24,6 +25,8 @@
   </div>
   <audio src="https://s3.us-east-2.amazonaws.com/lgpodcast/SampleAudio_0.4mb.mp3"></audio><a class="pcast-download" href="https://s3.us-east-2.amazonaws.com/lgpodcast/SampleAudio_0.4mb.mp3" download>Download MP3</a>
 </div>
+ <br><br><br><br>
+  <h2>Option 2</h2>
   <audio class="mejs__player" src="https://s3.us-east-2.amazonaws.com/lgpodcast/SampleAudio_0.4mb.mp3" width="100%" height="0" type="audio/mp3"></audio>
 </body>
   
